# kasa-rs

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  klap.pcapng
.github/workflows/: release.yml  rust.yml
crates/kasa/: Cargo.toml  README.md
crates/kasa-core/: Cargo.toml  README.md
crates/kasa-core/src/: commands.rs  credentials.rs  discovery.rs  error.rs  lib.rs  response.rs
crates/kasa-core/src/crypto/: klap.rs  mod.rs  spake2plus.rs  tpap.rs  xor.rs
crates/kasa-core/src/transport/: klap.rs  legacy.rs  mod.rs  tpap.rs
crates/kasa-exporter/: Cargo.toml
crates/kasa-exporter/src/: main.rs
crates/kasa-prometheus/: Cargo.toml
crates/kasa-prometheus/src/: main.rs  metrics.rs
crates/kasa/src/: cli.rs  handlers.rs  main.rs  utils.rs
monitoring/: README.md
monitoring/grafana/provisioning/dashboards/: dashboards.yml  kasa-devices.json
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
