[package]
name = "kasa-core"
version = "0.4.0"
description = "Core library for communicating with TP-Link Kasa smart devices"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]  # Used as md5:: due to crate naming conventions

[dependencies]
aes = "0.8.4"
async-trait = "0.1.89"
cbc = "0.1.2"
crc32fast = "1.4"
futures.workspace = true
hex = "0.4.3"
md-5 = "0.10.6"
rand = "0.9.2"
rsa = { version = "0.9", features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio.workspace = true
tracing.workspace = true
