[package]
name = "kasa-core"
version = "0.5.1"
description = "Core library for communicating with TP-Link Kasa smart devices"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]  # Used as md5:: due to crate naming conventions

[dependencies]
async-trait = "0.1.89"
crc32fast = "1.4"
futures.workspace = true
hex = "0.4.3"
rand = "0.9.2"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
tokio.workspace = true
tracing.workspace = true

# Start RustCrypto
# https://github.com/RustCrypto
aes = "0.8.4"
cbc = "0.1.2"
rsa = { version = "0.9", features = ["pem"] }
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
# TPAP/SPAKE2+ support
p256 = { version = "0.13", features = ["arithmetic", "ecdh"] }
pbkdf2 = "0.12"
hkdf = "0.12"
hmac = "0.12"
cmac = "0.7"
ccm = "0.5"
chacha20poly1305 = "0.10"
hex-literal = "0.4"
# End RustCrypto

# TLS support for TPAP
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pki-types = "1.0"
webpki-roots = "0.26"
base64 = "0.22"
secrecy = "0.10.3"
