[package]
name = "kasa-prometheus"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prometheus metrics exporter for TP-Link Kasa smart home devices"

[[bin]]
name = "kasa-prometheus"
path = "src/main.rs"

[dependencies]
kasa-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
prometheus-client = "0.24.0"
axum = "0.8.8"
serde_json = { workspace = true }
