[package]
name = "kasa"
version = "0.2.0"
description = "CLI for communicating with TP-Link Kasa smart devices"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kasa"
path = "src/main.rs"

[dependencies]
kasa-core.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword = "7.4.0"
